// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Reference Reference Type (Generic) 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const A = MantaStyle.TypeAliasDeclaration(\\"A\\", typeFactory => {
    const T = typeFactory.TypeParameter(\\"T\\");
    const type = MantaStyle.UnionType([MantaStyle.StringKeyword, T]);
    return type;
}, []);
const B = MantaStyle.TypeAliasDeclaration(\\"B\\", typeFactory => {
    const type = A.argumentTypes([MantaStyle.NumberKeyword]);
    return type;
}, []);
"
`;

exports[`Type Reference Reference Type (Non-generic) 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const A = MantaStyle.TypeAliasDeclaration(\\"A\\", typeFactory => {
    const type = MantaStyle.StringKeyword;
    return type;
}, []);
const B = MantaStyle.TypeAliasDeclaration(\\"B\\", typeFactory => {
    const type = A;
    return type;
}, []);
"
`;
